trying to get layout of LogException forms looking better

--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -14,8 +14,11 @@ body {
     padding: 0px !important;
     font-size: 14px !important;
     display: inline-block;
-    width: 100%;
+}
 
+.pageinputbox {
+    width: 50px !important;
+    display: inline-block;
 }
 
 .mylabel {
@@ -24,6 +27,13 @@ body {
     display: inline-block;
 }
 
+.sortLink {
+    text-decoration: underline;
+}
+
+.btn-group {
+    padding-left: 15px;
+}
 .btn-group button {
     background-color: #4CAF50; /* Green background */
     border: 1px solid green; /* Green border */
@@ -78,7 +88,6 @@ tr:nth-child(even) {
 }
 
 .block {
-    width: 50%;
     display: inline-block;
 }
 
