--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -25,6 +25,7 @@ body {
     padding: 0px !important;
     font-size: 14px !important;
     display: inline-block;
+    margin: 0px;
 }
 
 .sortLink {
