--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -54,13 +54,17 @@
             @Html.Label("*Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-
         <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 50px; display: inline-block;" />
      }
+    <div class="block">
+        @Html.ActionLink(linkText: "Undo search" ,
+                actionName: "Index",
+                controllerName: "LogException",
+                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
+                htmlAttributes: new { @class = "btn btn-default" })
+    </div>  
 </div>
 
-<!-- <div class="container">
-    <!-- Sort form -->
     <!-- (at)using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }, FormMethod.Post, new { id = "id" }))
     { 
     <div class="block" style="width: 25% !important; display: inline-block;">
@@ -79,7 +83,7 @@
     }
 </div>
 -->
-
+<br />
 <!-- Paging stuff -->
 <div class="container">
     <div class="row">
@@ -158,7 +162,6 @@
                         sortB = category;
                         sortD = "ASC";
                     }
-
                 <td>
                     @Html.ActionLink(category, "Index", new { sortBy = sortB, sortDir = sortD, searchBy = searchBy, searchInput = searchInput, id = 1 }, new { @class = className })
                 </td>
