improved display of page number and page controls on LogException

--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -32,6 +32,12 @@ body {
     text-decoration: underline;
 }
 
+.pageLabel {
+    border: 1px solid black;
+    font-size: 14px !important;
+    padding: inherit;
+}
+
 .btn-group button {
     background-color: #4CAF50; /* Green background */
     border: 1px solid green; /* Green border */
