--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -89,6 +89,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
+            <label class="pageLabel"> Current page: @Model.PageNumber / @Model.TotalPages</label>
+        </div>
+        <div class="col-md-4">
             <div class="btn-group">
                 @Html.ActionLink(linkText: " << First",
                                 actionName: "Index",
@@ -130,10 +133,6 @@
             }
         </div>
     </div>
-</div>
-
-<div>
-    Current Page: @Model.PageNumber/@Model.TotalPages
 </div>
 
 @if (!noResults)
