debugging refresh issue in LogWebRequest

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -275,7 +275,7 @@ else
 
     function UpdateImportance() {
         usernameValue = $("[name=usernameEntry]").val();
-
+        debugger;
         var model = {
             UserID: currentUserID,
             EmailAddress: currentEmailAddress,
