fixed refresh issue in other tables using 'async: false'

--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -61,26 +61,14 @@
     @Html.ActionLink(linkText: "Previous",
                      actionName: "Index",
                      controllerName: "LogControllerAction",
-                     routeValues: new
-                         {
-                             sortBy = sortBy,
-                             searchBy = searchBy,
-                             searchInput = searchInput,
-                         id = ((id - 1) != 0) ? (id - 1) : id
-                         },
+                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
                      htmlAttributes: null)
 </div>
 <div>
     @Html.ActionLink(linkText: "Next",
                      actionName: "Index",
                      controllerName: "LogControllerAction",
-                     routeValues: new
-                         {
-                             sortBy = sortBy,
-                             searchBy = searchBy,
-                             searchInput = searchInput,
-                         id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id
-                         },
+                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
                      htmlAttributes: null)
 </div>
 
