--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -14,34 +14,28 @@
     var searchBy = Model.SearchBy;
     var searchInput = Model.SearchInput;
     var sortBy = Model.SortBy;
+    var sortDir = Model.SortDirection;
     var id = Model.PageNumber;
+
+    List<String> categories = new List<String>() { "EmailAddress", "TimeStamp", "WebRequestID", "Message", "MethodName", "Object", "Important" };
 
     bool noResults = (Model.TotalItems == 0);
 
-    List<SelectListItem> listItems = new List<SelectListItem>();
-    listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
-    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
-    listItems.Add(new SelectListItem { Text = "Message", Value = "Message" });
-    listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
-    listItems.Add(new SelectListItem { Text = "Object", Value = "Object" });
-    listItems.Add(new SelectListItem { Text = "Importance", Value = "Important" });
-
-
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
     searchCategories.Add(new SelectListItem { Text = "Object", Value = "Object" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
 
-@using (Html.BeginRouteForm("Search", new { controller = "LogInfo", action = "Index" }))
-{
-    <div class="container" style="padding-top: 50px !important;">
-        <div class="block" style="width: 25% !important; display: inline-block;">
-            @Html.Label("Sort by: ", new { @class = "mylabel" })
-            @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown" })
-        </div>
+<div class="container" style="padding-top: 50px !important;">
+    @using (Html.BeginRouteForm("Search", new { controller = "LogInfo", action = "Index" }))
+    {
+        @Html.HiddenFor(m => m.SortBy)
+        @Html.HiddenFor(m => m.SortDirection)
+
         <div class="block" style="width: 25% !important; display: inline-block; ">
             @Html.Label("Search by: ", new { @class = "mylabel" })
             @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
@@ -50,46 +44,97 @@
             @Html.Label("*Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("Page: ", new { @class = "mylabel" })
-            @Html.TextBox("id", null, new { @class = "mytextbox" })
-        </div>
         <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline-block;" />
+        @Html.ActionLink(linkText: "Undo search",
+                 actionName: "Index",
+                 controllerName: "LogInfo",
+                 routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
+                 htmlAttributes: new { @class = "btn btn-default" })
+    }
+<br />
+
+</div>
+<!-- Paging stuff -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <label class="pageLabel"> Current page: @Model.PageNumber / @Model.TotalPages</label>
+        </div>
+        <div class="col-md-4">
+            <div class="btn-group">
+                @Html.ActionLink(linkText: " << First",
+                                actionName: "Index",
+                                controllerName: "LogInfo",
+                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = 1 },
+                                htmlAttributes: new { @class = "btn btn-default" })
+                @Html.ActionLink(linkText: "< Previous",
+                                actionName: "Index",
+                                controllerName: "LogInfo",
+                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
+                                htmlAttributes: new { @class = "btn btn-default" })
+                @Html.ActionLink(linkText: "Next >",
+                                actionName: "Index",
+                                controllerName: "LogInfo",
+                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
+                                htmlAttributes: new { @class = "btn btn-default" })
+                @Html.ActionLink(linkText: "Last >>",
+                                actionName: "Index",
+                                controllerName: "LogInfo",
+                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = Model.TotalPages },
+                                htmlAttributes: new { @class = "btn btn-default" })
+            </div>
+        </div>
+        <div class="col-md-4">
+            @using (Html.BeginRouteForm("Search", new { controller = "LogInfo", action = "Index" }))
+            {
+                @Html.HiddenFor(m => m.SortBy)
+                @Html.HiddenFor(m => m.SortDirection)
+                @Html.HiddenFor(m => m.SearchBy)
+                @Html.HiddenFor(m => m.SearchInput)
+
+                <div class="block">
+                    @Html.Label("Page: ", new { @class = "mylabel" })
+                </div>
+                <div class="block">
+                    @Html.TextBox("id", null, new { @class = "pageinputbox" })
+                </div>
+                <input type="submit" name="btnSubmit" value="Jump to page" class="btn btn-default" style="display: inline-block;" />
+            }
+        </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink(linkText: "Previous",
-                     actionName: "Index",
-                     controllerName: "LogInfo",
-                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
-                     htmlAttributes: null)
-</div>
-<div>
-    @Html.ActionLink(linkText: "Next",
-                     actionName: "Index",
-                     controllerName: "LogInfo",
-                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
-                     htmlAttributes: null)
 </div>
 
-<div>
-    Current Page: @Model.PageNumber/@Model.TotalPages
-</div>
 
 @if (!noResults)
 {
     <table style="width:100%; text-align:center;">
         <thead>
             <tr>
-                <td>Email Address</td>
-                <td>Time Stamp</td>
-                <td>Web Request ID</td>
-                <td>Message</td>
-                <td>Method Name</td>
-                <td>Object</td>
-                <td>Important</td>
-                <td>Mark as Important</td>
+                @foreach (String category in categories)
+                {
+                    var sortB = "";
+                    var sortD = "";
+                    var className = "";
+
+                    if (sortBy == category)
+                    {
+                        sortB = sortBy;
+                        className = "sortLink";<!-- If sortBy == the category name, make the link underlined -->
+
+                        if (sortDir == "ASC")
+                        { sortD = "DESC"; }
+                        else
+                        { sortD = "ASC"; }
+                    }
+                    else
+                    {
+                        sortB = category;
+                        sortD = "ASC";
+                    }
+                    <td>
+                        @Html.ActionLink(category, "Index", new { sortBy = sortB, sortDir = sortD, searchBy = searchBy, searchInput = searchInput, id = 1 }, new { @class = className })
+                    </td>
+                }
             </tr>
         </thead>
         <tbody>
@@ -102,25 +147,20 @@
                     <td>@currentRow.Message</td>
                     <td>@currentRow.MethodName</td>
                     <td>@currentRow.Object</td>
-                    <td>@currentRow.Important</td>
                     <td>
                         @if (currentRow.Important == null) //button to mark as important
                         {
-                            <button class="openModalButton" onclick="openModal('@currentRow.UserID.ToString()',
+                            <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
                             '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
                             '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
                             '@currentRow.MethodName.ToString()', '@currentRow.Object.ToString()')">
-                                Mark as important
-                            </button>
                         }
                         else //button to unmark as important
                         {
-                            <button class="markUnimportantButton" onclick="markUnimportant('@currentRow.UserID.ToString()',
+                            <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
                             '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
                             '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
                             '@currentRow.MethodName.ToString()', '@currentRow.Object.ToString()')">
-                                Undo
-                            </button>
                         }
                     </td>
                 </tr>
